force-app/main/default/objects/Work_Order_Priority_Weights__c/Work_Order_Priority_Weights__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Work Order Priority Weights</label>
</CustomObject>