force-app/main/default/objects/Work_Order_Priority_Weights__c/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <inlineHelpText>Is the account at risk? Values must be either &quot;true&quot;, &quot;false&quot;, or leave empty.</inlineHelpText>
    <label>At Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>