force-app/main/default/objects/Work_Order_Priority_Weights__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <inlineHelpText>The value of the customer tier to check against. &quot;Platinum&quot;, &quot;Gold&quot;, &quot;Silver&quot;, &quot;Bronze&quot; or empty are valid values.</inlineHelpText>
    <label>Customer Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>