force-app/main/default/objects/Work_Order_Priority_Weights__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>The number of days between the current date and the due date of the Service Appointment. Use 0-13 for the two week window, and &quot;14+&quot; for anything greater.</inlineHelpText>
    <label>Due Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>