force-app/main/default/objects/Work_Order_Priority_Weights__c/fields/Duration_1_Hour__c.field-meta.xml
<CustomField>
    <fullName>Duration_1_Hour__c</fullName>
    <inlineHelpText>Is the duration greater than 1 hour? Use &quot;Yes&quot; if the priority needs to be greater than 1 hour, or leave empty otherwise.</inlineHelpText>
    <label>Duration &gt; 1 Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>