force-app/main/default/objects/Work_Order_Priority_Weights__c/fields/Priority_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Priority_Ranking__c</fullName>
    <inlineHelpText>The final priority value that will be stamped onto the Work Order on the Priority (Derived) field.</inlineHelpText>
    <label>Priority Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>