force-app/main/default/objects/Work_Order_Priority_Weights__c/listViews/All_Priorities.listView-meta.xml
<ListView>
    <fullName>All_Priorities</fullName>
    <columns>NAME</columns>
    <columns>Customer_Tier__c</columns>
    <columns>At_Risk__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Duration_1_Hour__c</columns>
    <columns>Priority_Ranking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Priorities</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>